// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must split at the beginning of a block 1`] = `
[
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": Map {},
    "depth": 0,
    "key": "key0",
    "text": "Alpha",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
]
`;

exports[`must split at the end of a block 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alpha",
    "type": "unstyled",
  },
  {
    "characterList": [],
    "data": Map {},
    "depth": 0,
    "key": "key0",
    "text": "",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
]
`;

exports[`must split within a block 1`] = `
[
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "a",
    "text": "Alp",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": Map {},
    "depth": 0,
    "key": "key0",
    "text": "ha",
    "type": "unstyled",
  },
  {
    "characterList": [
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
      {
        "entity": "2",
        "style": [
          "BOLD",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "b",
    "text": "Bravo",
    "type": "unordered-list-item",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
      {
        "entity": null,
        "style": [],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "c",
    "text": "Test",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "d",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [],
    "data": {},
    "depth": 0,
    "key": "e",
    "text": "",
    "type": "code-block",
  },
  {
    "characterList": [
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
      {
        "entity": null,
        "style": [
          "ITALIC",
        ],
      },
    ],
    "data": {},
    "depth": 0,
    "key": "f",
    "text": "Charlie",
    "type": "blockquote",
  },
]
`;
